# miniscope-wired-interconnect-characterization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/EXP_2025_01_15_resistance_coax_40awg/: experiment.yaml  measurements.csv
experiments/EXP_2025_02_01_eye_diagram_coax_40awg/: experiment.yaml  manifest.csv
experiments/EXP_2025_03_01_vna_coax_40awg/: experiment.yaml  manifest.csv
models/cable_models/: coax_spi_sci_40awg.yaml
models/connector_models/: omnetics_a79606.yaml
src/: pipeline.py
src/aggregation/: __init__.py  base.py  eye_diagram.py  resistance.py  vna.py
src/cli/: main.py
src/core/: __init__.py  experiment_schemas.py  experiment_validator.py  loading.py  model_schemas.py  schemas.py  validation.py
src/experiment_types/: __init__.py  loader.py  registry.py
src/processing/: __init__.py  base.py  eye_diagram.py  resistance.py  touchstone.py  vna.py
src/wiki/: base.py  payloads.py  resolver.py
tests/: conftest.py
tests/fixtures/: generate_eye_fixtures.py  generate_vna_fixtures.py
tests/integration/: test_definition_roundtrip.py  test_eye_pipeline.py  test_full_pipeline.py  test_resistance_pipeline.py  test_resolution_pipeline.py  test_vna_pipeline.py
tests/unit/: test_cli.py  test_definition_loader.py  test_definition_schemas.py  test_experiment_schemas.py  test_experiment_validator.py  test_eye_aggregator.py  test_eye_processor.py  test_eye_validator.py  test_loading.py  test_model_schemas.py  test_pipeline.py  test_resistance_aggregator.py  test_resistance_processor.py  test_resolver.py  (+6 more)
(+57 files in other folders)
